[package]
name = "bitcask-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
